--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ Reduce costs, prevent theft, and make smarter decisions with live location data.
         </div>
       </div>
     </div>
-    
-    <div class="key-features-wrapper" id="features">
+    <div class="test-div" id="features"></div>
+    <div class="key-features-wrapper">
       <div class="container">
         <div class="key-feature-content width-sm">
           <h3  data-aos="fade-up" data-aos-delay="300">
@@ -358,7 +358,8 @@ Reduce costs, prevent theft, and make smarter decisions with live location data.
         </div>
       </div>
     </div>
-    <div class="contact-gradient" id="contactus">
+    <div class="test-div" id="contactus"></div>
+    <div class="contact-gradient" id="">
       <div class="contact-us">
         <div class="container">
           <div class="row">
