--- a/index.html
+++ b/index.html
@@ -47,9 +47,19 @@
               </li>
             </ul>
           </div>
+         <div class="d-flex align-items-center">
+          <div class="download-icons">
+            <a href="#">
+              <img src="images/play-store-top.png" alt="">
+            </a>
+            <a href="#">
+              <img src="images/app-store.png" alt="">
+            </a>
+          </div>
           <a class="login-btn" href="#">
             Login
           </a>
+         </div>
         </div>
       </nav>
       <div class="main-banner">
