--- a/index.html
+++ b/index.html
@@ -45,21 +45,32 @@
               <li class="nav-item">
                 <a class="nav-link login-btn" href="#">Login</a>
               </li>
+              <li class="d-flex align-items-center nav-item">
+                <div class="download-icons inside-menu">
+                  <a href="#">
+                    <img src="images/play-store-top.png" alt="">
+                  </a>
+                  <a href="#">
+                    <img src="images/app-store.png" alt="">
+                  </a>
+                </div>
+              </li>
             </ul>
           </div>
-         <div class="d-flex align-items-center">
-          <div class="download-icons">
-            <a href="#">
-              <img src="images/play-store-top.png" alt="">
+          
+          <div class="align-items-center d-flex deskview">
+            <div class="download-icons outside-menu">
+              <a href="#">
+                <img src="images/play-store-top.png" alt="">
+              </a>
+              <a href="#">
+                <img src="images/app-store.png" alt="">
+              </a>
+            </div>
+            <a class="login-btn" href="#">
+              Login
             </a>
-            <a href="#">
-              <img src="images/app-store.png" alt="">
-            </a>
-          </div>
-          <a class="login-btn" href="#">
-            Login
-          </a>
-         </div>
+          </li>
         </div>
       </nav>
       <div class="main-banner">
@@ -477,7 +488,7 @@ Reduce costs, prevent theft, and make smarter decisions with live location data.
     </div>
     <div class="footer">
       <div class="container-fluid">
-        <div class="d-lg-flex justify-content-between align-items-center">
+        <div class="d-md-flex justify-content-between align-items-center">
           <div>
             <img src="images/footer-logo.png" alt="footer-logo" class="footer-logo">
           </div>
