--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
               </li>
               <li class="d-flex align-items-center nav-item">
                 <div class="download-icons inside-menu">
-                  <a href="#">
+                  <a href="https://play.google.com/store/apps/details?id=com.touchworld.touchtracks " target="_blank">
                     <img src="images/play-store-top.png" alt="">
                   </a>
-                  <a href="#">
+                  <a href="https://apps.apple.com/app/touchtracks/id6747239304" target="_blank">
                     <img src="images/app-store.png" alt="">
                   </a>
                 </div>
@@ -60,10 +60,10 @@
           
           <div class="align-items-center d-flex deskview">
             <div class="download-icons outside-menu">
-              <a href="#">
+              <a href="https://play.google.com/store/apps/details?id=com.touchworld.touchtracks" target="_blank">
                 <img src="images/play-store-top.png" alt="">
               </a>
-              <a href="#">
+              <a href="https://apps.apple.com/app/touchtracks/id6747239304" target="_blank">
                 <img src="images/app-store.png" alt="">
               </a>
             </div>
